Archive2/07/33b222bc111a53/output
main.cpp:269:35: error: no template named 'forward'; did you mean 'std::forward'?
    for_each_in_arg_pack(print(), forward<Ts>(args)...);
                                  ^~~~~~~
                                  std::forward
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/move.h:76:5: note: 'std::forward' declared here
    forward(typename std::remove_reference<_Tp>::type& __t) noexcept
    ^
main.cpp:269:35: error: no template named 'forward'; did you mean 'std::forward'?
    for_each_in_arg_pack(print(), forward<Ts>(args)...);
                                  ^~~~~~~
                                  std::forward
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/move.h:76:5: note: 'std::forward' declared here
    forward(typename std::remove_reference<_Tp>::type& __t) noexcept
    ^
2 errors generated.
